<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="taskEditingVM" type="com.munirasapplication.app.modules.taskediting.data.viewmodel.TaskEditingVM"/>

    </data>
    <FrameLayout android:id="@+id/frameTaskediting"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylelime_100">
        <LinearLayout android:id="@+id/linearColumneditactivity"
            android:layout_gravity="top|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRoweditactivity"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEditActivity"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_116pxv"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_weight="0.55"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{taskEditingVM.taskEditingModel.txtEditActivity}"
                    style="@style/txtPoppinssemibold20" tools:text="@string/lbl_edit_activity"/>
                <ImageView android:id="@+id/imageEllipseOne"
                    android:layout_height="@dimen/_179pxh"
                    android:layout_marginStart="@dimen/_104pxh"
                    android:layout_width="@dimen/_98pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse1_179x98}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1_179x98"/>
            </LinearLayout>
            <EditText android:ellipsize="end"
                android:hint="@string/msg_dentist_appoint"
                android:id="@+id/etGroupFifteen"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@={taskEditingVM.taskEditingModel.etGroupFifteenValue}"
                android:textColorHint="@color/black_900"
                style="@style/etPolyregular16" tools:ignore="Autofill"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_description"
                android:id="@+id/etGroupSeventeen"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_94pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@={taskEditingVM.taskEditingModel.etGroupSeventeenValue}"
                android:textColorHint="@color/black_900"
                style="@style/etPolyregular16" tools:ignore="Autofill"/>
            <Button
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSave1"
                android:layout_height="65.50dp"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="@dimen/_187pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_save"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_save"/>
            <ImageView android:id="@+id/imageThumbsup"
                android:layout_gravity="end"
                android:layout_height="@dimen/_25pxh"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_53pxv"
                android:layout_width="@dimen/_21pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_thumbsup"
                tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" style="@style/groupStylebluegray_100_b2cornerRadius">
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                <ImageView android:id="@+id/imageUser"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_43pxh"
                    android:layout_marginStart="@dimen/_220pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
